--- a/ProyectoFinalValenti/templates/base.html
+++ b/ProyectoFinalValenti/templates/base.html
@@ -13,6 +13,7 @@
         <a href="/">Inicio</a>
         <a href="/about/">Acerca de mí</a>
         <a href="/pages/">Páginas</a>
+        <a href="{% url 'pages:blogs' %}">Blogs</a>
         {% if user.is_authenticated %}
             <a href="/accounts/profile/">Perfil</a>
             <a href="/accounts/logout/">Cerrar sesión</a>
